--- a/programing/index.html
+++ b/programing/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Vacation</title>
+<title>Vacation2</title>
 <link rel="stylesheet" href="css/style.css" >
 <link rel="stylesheet" href="css/all.css">
 </head>
